<resources>
    <string name="app_name">Social World</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="create_profile">Create Profile</string>
    <string name="terms_of_use">I accept with the Terms of use</string>
    <string name="passwords_mismatch">Passwords don\'t match!</string>
    <string name="please_confirm_terms">Please agree with the terms of use</string>
    <string name="email_can_not_be_empty">Email can\'t be empty</string>
    <string name="username_can_not_be_empty">Name can\'t be empty</string>
    <string name="pass_can_not_be_empty">Password can\'t be empty</string>
    <string name="pass_too_short">The password is too short</string>
    <string name="reset_pass_email_sent">Email sent to reset your password</string>
    <string name="user_registered">User registered</string>

    <string name="loading">Loading</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="date_format_hint">DD/MM/YYYY</string>
    <string name="username_hint">Enter Username</string>
    <string name="update_profile">Update Profile</string>
    <string name="disable_profile">Disable Profile</string>
    <string name="disable_profile_warning">Are you sure you want to disable your profile?</string>
    <string name="disabled_profile_notification">Profile disabled. You can activate your profile by logging in.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="profile_pic">Profile Picture</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="profile_updated">Profile updated</string>
    <string name="failed_upload_profile_pic">Failed_to_upload_new_profile_picture</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="not_defined">Not defined</string>

    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="pic">Picture</string>

    <string name="add_new_post">Add New Post</string>
    <string name="write_something">Write something…</string>
    <string name="please_add_pic_or_text">Please add picture or text for the post</string>
    <string name="post_added">Post added</string>

    <string name="search">Search</string>
    <string name="please_input_username">Please input username</string>

    <string name="not_following_anyone">You aren\'t following anyone yet</string>

    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="likes">Likes</string>
    <string name="comments">Comments</string>

    <string name="post_details">Post Details</string>
    <string name="add_comment_hint">Add Comment…</string>
    <string name="please_input_text">Please input text</string>
    <string name="comment_added">Comment added</string>
    <string name="delete_post">Delete post</string>
    <string name="delete_post_warning">Are you sure you want to delete your post?</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_comment_warning">Are you sure you want to delete your comment?</string>

    <string name="unknown_user">Unknown User</string>
    <string name="user_details">User Details</string>

    <string name="followed">Followed</string>
    <string name="unfollowed">Unfollowed</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_posts">My Posts</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_find_users">Find Users</string>
</resources>
