<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.socialworld.mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.socialworld.mobile.ui.home.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_my_posts"
        android:name="com.socialworld.mobile.ui.myPosts.MyPostsFragment"
        android:label="@string/menu_my_posts"
        tools:layout="@layout/fragment_my_posts" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.socialworld.mobile.ui.myProfile.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_my_profile" >
        <action
            android:id="@+id/action_nav_my_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.socialworld.mobile.ui.myProfile.EditMyProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_my_profile">
        <action
            android:id="@+id/action_nav_edit_profile_to_nav_my_profile"
            app:destination="@id/nav_my_profile"
            app:popUpTo="@+id/nav_my_profile"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_find_users"
        android:name="com.socialworld.mobile.ui.findUsers.FindUsersFragment"
        android:label="@string/menu_find_users"
        tools:layout="@layout/fragment_find_users">
    </fragment>
</navigation>
