<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.myProfile.EditMyProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp">

        <ImageView
            android:id="@+id/edit_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="17dp"
            android:background="@drawable/shape_img_view_border"
            android:contentDescription="@string/profile_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_circle" />

        <TextView
            android:id="@+id/change_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/change_profile_picture"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_image" />

        <TextView
            android:id="@+id/name_lbl"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_photo_text" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/name_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_lbl"
            app:layout_constraintTop_toTopOf="@+id/name_lbl" />

        <TextView
            android:id="@+id/gender_lbl"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:text="@string/gender"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_lbl" />

        <Spinner
            android:id="@+id/edit_gender_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="12dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/gender_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gender_lbl"
            app:layout_constraintTop_toTopOf="@+id/gender_lbl" />

        <TextView
            android:id="@+id/country_lbl"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:text="@string/country"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_lbl" />

        <Spinner
            android:id="@+id/edit_country_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="12dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/country_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/country_lbl"
            app:layout_constraintTop_toTopOf="@+id/country_lbl" />

        <TextView
            android:id="@+id/date_of_birth_lbl"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_lbl" />

        <EditText
            android:id="@+id/edit_date_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="7dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date_format_hint"
            android:inputType="date"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/date_of_birth_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_of_birth_lbl"
            app:layout_constraintTop_toTopOf="@+id/date_of_birth_lbl" />

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/btn_dark_green_background"
            android:text="@string/update_profile"
            android:textColor="@color/colorWhiteText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_of_birth_lbl" />

        <TextView
            android:id="@+id/edit_disable_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_profile"
            android:layout_marginTop="30dp"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColor="@color/colorAuthorizeButtonsGreen"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_update_profile"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
