<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/user_details_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="17dp"
        android:background="@drawable/shape_img_view_border"
        android:contentDescription="@string/profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_circle" />

    <TextView
        android:id="@+id/followers_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:padding="11dp"
        android:text="@string/followers"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/user_details_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_details_num_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/followers_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/followers_lbl"
        app:layout_constraintTop_toTopOf="@+id/followers_lbl" />

    <TextView
        android:id="@+id/following_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:text="@string/following"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/user_details_image"
        app:layout_constraintTop_toBottomOf="@id/followers_lbl" />

    <TextView
        android:id="@+id/user_details_num_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/following_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/following_lbl"
        app:layout_constraintTop_toTopOf="@+id/following_lbl" />

    <TextView
        android:id="@+id/name_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/name"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_details_image" />

    <TextView
        android:id="@+id/user_details_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="10dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/name_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_lbl"
        app:layout_constraintTop_toTopOf="@+id/name_lbl" />

    <TextView
        android:id="@+id/gender_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/gender"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_lbl" />

    <TextView
        android:id="@+id/user_details_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="10dp"
        android:text="@string/not_defined"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/gender_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gender_lbl"
        app:layout_constraintTop_toTopOf="@+id/gender_lbl" />

    <TextView
        android:id="@+id/country_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/country"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_lbl" />

    <TextView
        android:id="@+id/user_details_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="10dp"
        android:text="@string/not_defined"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/country_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/country_lbl"
        app:layout_constraintTop_toTopOf="@+id/country_lbl" />

    <TextView
        android:id="@+id/date_of_birth_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/date_of_birth"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_lbl" />

    <TextView
        android:id="@+id/user_details_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="10dp"
        android:text="@string/not_defined"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/date_of_birth_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_of_birth_lbl"
        app:layout_constraintTop_toTopOf="@+id/date_of_birth_lbl" />

</androidx.constraintlayout.widget.ConstraintLayout>