<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    tools:context=".ui.myProfile.MyProfileFragment">

    <ImageView
        android:id="@+id/my_profile_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/profile_pic"
        android:background="@drawable/shape_img_view_border"
        android:layout_margin="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_circle" />

    <TextView
        android:id="@+id/followers_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:padding="11dp"
        android:textSize="14sp"
        android:text="@string/followers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/my_profile_image"/>

    <TextView
        android:id="@+id/my_profile_num_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/followers_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/followers_lbl"
        app:layout_constraintTop_toTopOf="@+id/followers_lbl"/>

    <TextView
        android:id="@+id/following_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:textSize="14sp"
        android:text="@string/following"
        app:layout_constraintTop_toBottomOf="@id/followers_lbl"
        app:layout_constraintStart_toEndOf="@id/my_profile_image" />

    <TextView
        android:id="@+id/my_profile_num_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/following_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/following_lbl"
        app:layout_constraintTop_toTopOf="@+id/following_lbl"/>

    <TextView
        android:id="@+id/name_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/name"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_profile_image" />

    <TextView
        android:id="@+id/my_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/name_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_lbl"
        app:layout_constraintTop_toTopOf="@+id/name_lbl" />

    <TextView
        android:id="@+id/gender_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/gender"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_lbl" />

    <TextView
        android:id="@+id/my_profile_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:text="@string/not_defined"
        app:layout_constraintBottom_toBottomOf="@+id/gender_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gender_lbl"
        app:layout_constraintTop_toTopOf="@+id/gender_lbl" />

    <TextView
        android:id="@+id/country_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/country"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_lbl" />

    <TextView
        android:id="@+id/my_profile_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:text="@string/not_defined"
        app:layout_constraintBottom_toBottomOf="@+id/country_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/country_lbl"
        app:layout_constraintTop_toTopOf="@+id/country_lbl" />

    <TextView
        android:id="@+id/date_of_birth_lbl"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/date_of_birth"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_lbl" />

    <TextView
        android:id="@+id/my_profile_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:text="@string/not_defined"
        app:layout_constraintBottom_toBottomOf="@+id/date_of_birth_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_of_birth_lbl"
        app:layout_constraintTop_toTopOf="@+id/date_of_birth_lbl" />

<!--    <TextView-->
<!--        android:id="@+id/email_lbl"-->
<!--        android:layout_width="130dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="10dp"-->
<!--        android:paddingBottom="10dp"-->
<!--        android:paddingStart="15dp"-->
<!--        android:paddingEnd="15dp"-->
<!--        android:text="@string/email"-->
<!--        android:textSize="15sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/date_of_birth_lbl" />-->

<!--    <TextView-->
<!--        android:id="@+id/my_profile_email"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="10dp"-->
<!--        android:paddingBottom="10dp"-->
<!--        android:textSize="15sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/email_lbl"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/email_lbl"-->
<!--        app:layout_constraintTop_toTopOf="@+id/email_lbl" />-->

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:text="@string/edit_profile"
        android:textColor="@color/colorWhiteText"
        android:background="@drawable/btn_dark_green_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birth_lbl" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/logout"
        android:background="@drawable/btn_light_grey_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>