<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="9dp">

    <ImageView
        android:id="@+id/feed_post_profile_img"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_circle_img_border"
        android:contentDescription="@string/profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_circle" />

    <TextView
        android:id="@+id/feed_post_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/feed_post_profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feed_post_profile_img"
        app:layout_constraintTop_toTopOf="@+id/feed_post_profile_img" />

    <ImageView
        android:id="@+id/feed_post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_post_profile_img" />

    <TextView
        android:id="@+id/feed_post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_post_image" />

    <ImageView
        android:id="@+id/feed_like_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_post_text"
        app:srcCompat="@drawable/ic_like_unmarked" />

    <TextView
        android:id="@+id/feed_likes_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/feed_like_img"
        app:layout_constraintStart_toEndOf="@+id/feed_like_img"
        app:layout_constraintTop_toTopOf="@+id/feed_like_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/likes"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/feed_like_img"
        app:layout_constraintTop_toTopOf="@+id/feed_like_img"
        app:layout_constraintStart_toEndOf="@+id/feed_likes_num"/>

</androidx.constraintlayout.widget.ConstraintLayout>